--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,14 @@ input, textarea, select {
   .animate-stitch {
     animation: stitch 3s linear infinite;
   }
+
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
 
 @keyframes stitch {
